# entropy-firewall

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOY_DIGITALOCEAN.md  Dockerfile  INSTALL.md  LICENSE  README-ENTERPRISE.md  README.md  RENDER_ENV_VARS.md  SECURITY.md  config.yaml  docker-compose.yml  entropy.yaml  pyproject.toml  pytest.ini  render.yaml  run_server.ps1  run_server.sh
.do/: app.yaml
.github/workflows/: ci.yml
deployments/k8s/: deployment.yaml  secrets.yaml
entropy/: __init__.py  guardrails.py  integrations.py
entropy/api/: __init__.py  app.py  dependencies.py  middleware.py
entropy/api/routes/: __init__.py  admin.py  chat.py  compliance.py  feedback.py  health.py  rag.py
entropy/api/static/compliance/: index.html
entropy/canary/: canary_store.py  canary_tokens.py
entropy/cli/: main.py  simulate.py
entropy/compliance/: 003_compliance.sql  policy_parser.py
entropy/config/: __init__.py  settings.py
entropy/core/: __init__.py  canary_tokens.py  context_analyzer.py  engine.py  indirect_injection_detector.py  input_sanitizer.py  input_validator.py  model_downloader.py  output_filter.py  pattern_matcher.py  rag_scanner.py  semantic_analyzer.py  streaming_output_filter.py
entropy/db/: __init__.py  connection.py  repository.py
entropy/db/migrations/: 001_initial.sql  002_feedback.sql  003_compliance.sql
entropy/dlp/: streaming_output_filter.py
entropy/learning/: 002_feedback.sql  feedback_store.py  threshold_tuner.py
entropy/models/: __init__.py  schemas.py
entropy/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  groq_provider.py  openai_provider.py  openrouter_provider.py  registry.py
entropy/rag/: rag_scanner.py
entropy/sdk/: __init__.py  client.py  secure.py
entropy/services/: __init__.py  auth.py  canary_store.py  metrics.py  pattern_registry.py  rate_limiter.py  security_logger.py
entropy/services/compliance/: __init__.py  policy_parser.py
entropy/services/learning/: __init__.py  feedback_store.py  threshold_tuner.py
tests/: conftest.py
tests/integration/: test_api.py  test_compliance.py  test_enterprise.py
tests/unit/: test_cli_onboarding.py  test_context_analyzer.py  test_engine.py  test_indirect_injection.py  test_indirect_injection_detector.py  test_input_sanitizer.py  test_input_validator.py  test_output_filter.py  test_pattern_matcher.py  test_provider_bootstrap_errors.py  test_semantic_analyzer.py  test_settings_provider_aliases.py
