[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entropy-firewall"
version = "0.1.0"
description = "Entropy — LLM Security Firewall. Ordering the chaos."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Entropy Security" }]
keywords = ["llm", "firewall", "security", "prompt-injection", "ai-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "openai>=1.6.0",
    "httpx>=0.25.0",
    "structlog>=23.2.0",
    "python-dotenv>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.19.0",
    "pyyaml>=6.0.1",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "fakeredis>=2.21.0",
]
semantic = [
    "onnxruntime>=1.17.0",
    "tokenizers>=0.15.0",
    "numpy>=1.24.0",
]

[project.scripts]
entropy = "entropy.cli.main:app"
entropy-download-model = "entropy.core.model_downloader:download_model_cli"

[project.urls]
Homepage = "https://github.com/paarthbhatt/entropy-firewall"
Documentation = "https://docs.entropy.security"
Repository = "https://github.com/paarthbhatt/entropy-firewall"
Issues = "https://github.com/paarthbhatt/entropy-firewall/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["entropy*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF", "SIM", "TCH"]
ignore = ["PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "passlib.hash"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "anthropic"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_openai"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "llama_index"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "llama_index.llms"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "autogen"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "entropy_pro"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "entropy_pro.core"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "entropy_pro.core.context_analyzer"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "entropy_pro.core.semantic_analyzer"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "entropy_pro.core.input_sanitizer"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "entropy_pro.core.indirect_injection_detector"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openai"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "llama_index.llms.openai"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "llama_index.llms"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.generativeai"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "anthropic"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openai"
ignore_missing_imports = true

# Relaxed type checking for SDK and provider files
[[tool.mypy.overrides]]
module = "entropy.sdk.client"
ignore_errors = true

[[tool.mypy.overrides]]
module = "entropy.sdk.secure"
ignore_errors = true

[[tool.mypy.overrides]]
module = "entropy.providers.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "entropy.db.repository"
ignore_errors = true

[[tool.mypy.overrides]]
module = "entropy.providers.registry"
ignore_errors = true

[[tool.mypy.overrides]]
module = "entropy.api.app"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "entropy.api.dependencies"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "entropy.cli.main"
ignore_errors = true

[[tool.mypy.overrides]]
module = "entropy.integrations"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "--cov=entropy --cov-report=term-missing -v"
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require services)",
    "slow: Slow tests",
]
